Restructured files and added gulp/scss

--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!doctype html>
 <html lang="en">
 <head>
@@ -8,30 +6,32 @@
   <!-- disable zooming -->
   <meta name="viewport" content="initial-scale=1.0, user-scalable=0" />
   
-  <title>Cube 2 - show sides &middot; Intro to CSS 3D transforms &rsaquo; Examples</title>
-  <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="./css/style.css" media="screen" />
+  <title>Harm Manders</title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link rel="stylesheet" href="./static/css/styles.css" media="screen" />
 
-  <!-- load jQuery -->
+  <!-- load js libs -->
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-  <script type="text/javascript" src="./js/zoom-box.js"></script>
-  <script src="./js/utils.js"></script>
-  <script src="./js/rotate-box.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
+
+  <!-- load custom js -->
+  <script type="text/javascript" src="./static/js/zoom-box.js"></script>
+  <script src="./static/js/utils.js"></script>
+  <script src="./static/js/rotate-box.js"></script>
 
 </head>
 <body>
-  <!-- <section class="header">
-    <h1>projectCube</h1>
-  </section>-->
-  <section class="container">
+  <section id="nav-bar">
+    
+  </section>
+  <section class="cube-container">
     <div id="cube" class="show-front">
-      <figure class="front side"><img src="./images/icons/home.svg" ><p>Home</p></figure>
-      <figure class="back side"><img src="./images/icons/contact.svg"><p>Contact</p></figure>
-      <figure class="right side"><img src="./images/icons/profile.svg"><p>Profile</p></figure>
-      <figure class="left side"><img src="./images/icons/arrow_down.svg"><p>Present</p></figure>
-      <figure class="top side"><img src="./images/icons/arrow_down.svg"><p>Future</p></figure>
-      <figure class="bottom side"><img src="./images/icons/arrow_down.svg"><p>History</p></figure>
-      <!-- <figure class="bottom side"><iframe src="./index.php"></iframe> -->
+      <figure class="front side"><img src="./static/images/icons/home.svg" ><p>Home</p></figure>
+      <figure class="back side"><img src="./static/images/icons/contact.svg"><p>Contact</p></figure>
+      <figure class="right side"><img src="./static/images/icons/profile.svg"><p>Profile</p></figure>
+      <figure class="left side"><img src="./static/images/icons/arrow_down.svg"><p>Present</p></figure>
+      <figure class="top side"><img src="./static/images/icons/arrow_down.svg"><p>Future</p></figure>
+      <figure class="bottom side"><img src="./static/images/icons/arrow_down.svg"><p>History</p></figure>
     </div>
   </section>
 
@@ -57,10 +57,7 @@
   </section>
 
 
-  
-  <footer style="display: none">
-    <p>Major credits to David DeSandro for his awesome tutorial to create 3D cubes with CSS3</p>
-  </footer>
+<!-- Major credits to David DeSandro for his awesome tutorial to create 3D cubes with CSS3 -->
 
 </body>
 </html>
